[package]
name = "redirtor"
version = "0.1.0"
edition = "2024"
description = "A Windows SSH reverse tunnel agent for remote maintenance"
authors = ["redirtor contributors"]
license = "MIT"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.23", features = ["derive"] }
russh = "0.61.2"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = true
strip = true
